# qa-guru-python-lesson-3

./: .env.example  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: release.yml  test.yml
app/: main.py
app/database/: engine.py  users.py
app/models/: User.py
app/routes/: status.py  users.py
tests/: conftest.py  constants.py  fixture_sessions.py  test_api.py  test_smoke.py
tests/data_generators/: UserMaker.py
tests/factories/: UserFactory.py
tests/utils/: base_session.py
